fix(events): list action item alignment

--- a/app/assets/stylesheets/collection-actions.scss
+++ b/app/assets/stylesheets/collection-actions.scss
@@ -4,6 +4,6 @@
   .fixed-action-btn {
     position: absolute;
     top: -10px;
-    right: -10px;
+    right: 6px;
   }
 }
